k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: levelup-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: heshanheshan/payment-service:latest
        ports:
        - containerPort: 8085
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 8085
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 8085
        #   initialDelaySeconds: 60
        #   periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: levelup-learning
spec:
  selector:
    app: payment-service
  ports:
  - port: 8085
    targetPort: 8085
  type: ClusterIP
